--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : Seung Blog # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : Seunghyeon # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -109,9 +109,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Seung Hyeon"
+  name             : "Seunghyeon Cho"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "2020 "
+  bio              : "Computer"
   location         : "Daejeon,Korea"
   email            : "pmcsh04@naver.com"
   links:
