--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,8 @@ analytics:
 author:
   name             : "Seunghyeon Cho"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Computer"
-  location         : "Daejeon,Korea"
+  bio              : "Computer Science and Engineering, Chungnam National University"
+  location         : "Daejeon,KOREA"
   email            : "pmcsh04@naver.com"
   links:
     - label: "Email"
