--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "Seunghyeon Cho"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Computer Science and Engineering, Chungnam National University"
+  bio              : "Computer Science & Engineering, Chungnam National University"
   location         : "Daejeon,KOREA"
   email            : "pmcsh04@naver.com"
   links:
